[gd_scene load_steps=16 format=3 uid="uid://bviw4wx2laqag"]

[ext_resource type="Script" path="res://Scenes/game.gd" id="1_2tnct"]
[ext_resource type="Texture2D" uid="uid://pw1wpxwlque7" path="res://Textures/Backgrounds/background.png" id="1_48x5b"]
[ext_resource type="PackedScene" uid="uid://dmcqoohtinyr1" path="res://Scenes/fish.tscn" id="2_ea5sf"]
[ext_resource type="Shader" path="res://Scenes/background.gdshader" id="2_mc2jp"]
[ext_resource type="Script" path="res://Scenes/background.gd" id="4_bsinc"]
[ext_resource type="Script" path="res://Scenes/game_manager.gd" id="4_cqt8y"]
[ext_resource type="Texture2D" uid="uid://c7yh3onttaenq" path="res://Textures/Backgrounds/background_grad.png" id="5_cq2wm"]
[ext_resource type="Script" path="res://Scenes/game_scaler.gd" id="6_6aaah"]
[ext_resource type="PackedScene" uid="uid://bfbdti018xlkm" path="res://Scenes/Pickups/coin.tscn" id="7_5w3j0"]
[ext_resource type="Script" path="res://Scenes/sprite_background.gd" id="7_vai64"]
[ext_resource type="PackedScene" uid="uid://nm2c8x0fbn5c" path="res://Scenes/Pickups/coin_explosion.tscn" id="8_wo164"]
[ext_resource type="Texture2D" uid="uid://c0etl38vn3bw6" path="res://Textures/UI/Buttons/button_cross.png" id="10_40ndf"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_uo4vc"]
shader = ExtResource("2_mc2jp")
shader_parameter/tint = null
shader_parameter/offset = 759.835
shader_parameter/phase = 0.0
shader_parameter/gradient = ExtResource("5_cq2wm")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_as7ao"]
shader = ExtResource("2_mc2jp")
shader_parameter/tint = null
shader_parameter/offset = 0.0
shader_parameter/phase = 0.0
shader_parameter/gradient = ExtResource("5_cq2wm")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_quh18"]
size = Vector2(22000, 2200)

[node name="Game" type="Node"]
script = ExtResource("1_2tnct")

[node name="GameScaler" type="Node2D" parent="."]
process_mode = 3
position = Vector2(960, 512)
script = ExtResource("6_6aaah")

[node name="Background" type="TextureRect" parent="GameScaler"]
process_mode = 1
material = SubResource("ShaderMaterial_uo4vc")
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -512.0
offset_top = -512.0
offset_right = 512.0
offset_bottom = 512.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_48x5b")
stretch_mode = 1
script = ExtResource("4_bsinc")
tint = Color(0.351123, 0.464003, 0.607544, 1)
gradientTexture = ExtResource("5_cq2wm")
offset = 759.835
phase = 0.0

[node name="GameNode2D" type="Node2D" parent="GameScaler"]
unique_name_in_owner = true
process_mode = 1

[node name="Background" type="Sprite2D" parent="GameScaler/GameNode2D"]
visible = false
z_index = 1
texture_repeat = 2
material = SubResource("ShaderMaterial_as7ao")
position = Vector2(324.5, 0)
scale = Vector2(1.63379, 1)
texture = ExtResource("1_48x5b")
script = ExtResource("7_vai64")
gradientTexture = ExtResource("5_cq2wm")
phase = 0.0

[node name="Fishes" type="Node2D" parent="GameScaler/GameNode2D"]
unique_name_in_owner = true

[node name="Fish" parent="GameScaler/GameNode2D/Fishes" instance=ExtResource("2_ea5sf")]

[node name="Obstacles" type="Node2D" parent="GameScaler/GameNode2D"]
unique_name_in_owner = true

[node name="Pickups" type="Node2D" parent="GameScaler/GameNode2D"]
unique_name_in_owner = true

[node name="Coin" parent="GameScaler/GameNode2D/Pickups" node_paths=PackedStringArray("game_manager") instance=ExtResource("7_5w3j0")]
position = Vector2(-258, -8)
game_manager = NodePath("../../Managers/GameManager")

[node name="CoinExplosion" parent="GameScaler/GameNode2D/Pickups" node_paths=PackedStringArray("game_manager") instance=ExtResource("8_wo164")]
position = Vector2(-343, 29)
game_manager = NodePath("../../Managers/GameManager")

[node name="Managers" type="Node" parent="GameScaler/GameNode2D"]

[node name="GameManager" type="Node" parent="GameScaler/GameNode2D/Managers" node_paths=PackedStringArray("game_zone")]
unique_name_in_owner = true
script = ExtResource("4_cqt8y")
left_boundary = -2200.0
zone_spawn_offset = 1500.0
game_zone = NodePath("../../Helpers/Area2D/GameZone")

[node name="Helpers" type="Node2D" parent="GameScaler/GameNode2D"]

[node name="Area2D" type="Area2D" parent="GameScaler/GameNode2D/Helpers"]
collision_layer = 4
collision_mask = 0

[node name="GameZone" type="CollisionShape2D" parent="GameScaler/GameNode2D/Helpers/Area2D"]
unique_name_in_owner = true
position = Vector2(8800, 0)
shape = SubResource("RectangleShape2D_quh18")
disabled = true

[node name="Markers" type="Node2D" parent="GameScaler/GameNode2D"]
visible = false

[node name="Bottom" type="Sprite2D" parent="GameScaler/GameNode2D/Markers"]
position = Vector2(0, 512)
texture = ExtResource("10_40ndf")

[node name="Top" type="Sprite2D" parent="GameScaler/GameNode2D/Markers"]
position = Vector2(0, -512)
texture = ExtResource("10_40ndf")

[connection signal="state_changed" from="." to="GameScaler/Background" method="_on_game_state_changed"]
[connection signal="state_changed" from="." to="GameScaler/GameNode2D/Background" method="_on_game_state_changed"]
[connection signal="state_changed" from="GameScaler/GameNode2D/Fishes/Fish" to="." method="_on_fish_state_changed"]
[connection signal="sound_triggered" from="GameScaler/GameNode2D/Managers/GameManager" to="." method="_on_game_manager_sound_triggered"]
[connection signal="zone_changed" from="GameScaler/GameNode2D/Managers/GameManager" to="." method="_on_game_manager_zone_changed"]
